--- a/frontend/vue-project/index.html
+++ b/frontend/vue-project/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000000">
+    <link rel="mask-icon" href="/favicon.svg" color="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lukas WhatsApp</title>
   </head>
